# ares-backend

./: .dockerignore  .env.development  .env.production  .env.staging  .gitignore  .rag_meta.json  Dockerfile  README.md  REQUIREMENTS.md  gradio_refactored.py  main.py  manage.py  mise.toml  pyproject.toml  schema.yaml
.cursor/rules/: django-rule.mdc  restful-api-rule.mdc
ares/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ares/api/: adapter.py  admin.py  apps.py  config.py  consumers.py  orchestrator.py  routing.py  urls.py
ares/api/migrations/: 0001_initial.py  0002_alter_education_degree_alter_education_major_and_more.py  0002_career_disability_education_militaryservice_patriot_and_more.py  0003_alter_career_options_alter_disability_options_and_more.py  0003_career_task_resumecareer_task.py  0004_alter_education_admission_date_and_more.py  0004_interviewsession_interviewturn.py  0005_alter_jobinterest_options_and_more.py  0005_interviewsession_context_interviewsession_difficulty_and_more.py  0006_alter_interviewturn_unique_together_and_more.py  0007_interviewsession_rag_context.py  0008_googleauthtoken.py  0008_interviewsession_interviewer_mode.py  0009_interviewsession_interviewer_mode.py  0010_remove_interviewturn_unique_session_turnindex_and_more.py  0011_profile.py  0012_interviewturn_question_ssml.py
ares/api/models/: __init__.py  calendar.py  cover_letter.py  interview.py  interview_report.py  user.py
ares/api/services/: blob_storage.py  company_data.py  dart_service.py  final_report_service.py  followup_soft.py  interview_analysis_service.py  interview_bot.py  interview_bot_service.py  interview_metrics.py  interview_service.py  (+14 more)
ares/test2/: analyze_interview_final_optimized.py  app.py  calculate_scores_improved.py  extract_features_optimized.py
ares/utils/: example_util.py
data/: NCS_middle.csv  companies_updated.csv  scores.csv
logs/ares/: report_1757571434.md
(+106 files in other folders)
